fix toast alignment

--- a/src/components/NotificationCenter/NotificationCenter.scss
+++ b/src/components/NotificationCenter/NotificationCenter.scss
@@ -6,7 +6,7 @@
     position: absolute;
     right: 0;
     padding: 0;
-    top: 92px;
+    top: 116px;
 
     .Toastify__toast {
       background-color: var(--toastBackground);
